# ros_navigation_stack

./: .gitignore  README.md  frames_2025-04-01_02.07.26.gv
install/: local_setup.sh  setup.sh
install/mobile_base_description/share/mobile_base_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mobile_base_description/share/mobile_base_description/cmake/: mobile_base_descriptionConfig-version.cmake  mobile_base_descriptionConfig.cmake
install/mobile_base_description/share/mobile_base_description/environment/: path.dsv  (+1 more)
install/my_robot_bringup/share/my_robot_bringup/: package.sh  package.xml
log/: latest_build
src/mobile_base_description/: CMakeLists.txt  CMakeLists_old.txt  package.xml
src/mobile_base_description/launch/: display.launch.py  display.launch.xml
src/mobile_base_description/rviz/: segway_urdf_config.rviz  urdf_config.rviz
src/mobile_base_description/urdf/: mobile_base.urdf  mobile_base.urdf.xacro.bck  mobile_base_gazebo.xacro  my_robot.urdf.xacro  nova_carter.urdf.xacro  nova_carter.urdf_bck.xacro  nova_carter_platform_macro.urdf copy.xacro  nova_carter_platform_macro.urdf.xacro
src/mobile_base_description/urdf/config/: box_filter.yaml  dwa_local_planner_params.yaml  ekf.yaml  joystick.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_default_view.rviz  nav2_params .bak.03-10-23.yaml  nav2_params copy.yaml  nav2_params.yaml  twist_mux.yaml
src/mobile_base_description/urdf/description/: camera.xacro  face.xacro  imu.xacro  oak-d-lite.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/mobile_base_description/urdf/description/include/: depthai_macro.urdf.xacro
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/config/: gazebo_bridge.yaml
src/my_robot_bringup/launch/: my_robot_gazebo.launch.xml
src/my_robot_bringup/scripts/: marker_model.sdf  navigator.py  navigator1.py  spawn_markers.py  test.py  test_nav.py  waypoint_follower.py  waypoint_follower3.py  waypoints copy.txt  waypoints.txt  waypoints1.txt
src/my_robot_bringup/worlds/: points_world.sdf  points_world_final.sdf  test_world.sdf
(+11 files in other folders)
